parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    STRING

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA LETRERO SCO VARIABLES FUNCIONES PRIN
Rule 2     programa -> PROGRAMA LETRERO SCO FUNCIONES PRIN
Rule 3     programa -> PROGRAMA LETRERO SCO VARIABLES PRIN
Rule 4     programa -> PROGRAMA LETRERO SCO PRIN
Rule 5     VARIABLES -> VAR OTRA
Rule 6     OTRA -> LETRERO OTRA
Rule 7     OTRA -> LETRERO LCOR NUM_I RCOR OTRA
Rule 8     OTRA -> TIPO OTRA
Rule 9     OTRA -> COM OTRA
Rule 10    OTRA -> SCO OTRA
Rule 11    OTRA -> empty
Rule 12    empty -> <empty>
Rule 13    TIPO -> INT
Rule 14    TIPO -> FLOAT
Rule 15    TIPO -> CHAR
Rule 16    FUNCIONES -> FUNCION TIPO LETRERO LPAR OTRA RPAR SCO VARIABLES LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA
Rule 17    FUNCIONES -> FUNCION VOID LETRERO LPAR OTRA RPAR SCO VARIABLES LBRA ESTATUTOS RBRA
Rule 18    FUNCIONES -> FUNCION TIPO LETRERO LPAR OTRA RPAR SCO LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA
Rule 19    FUNCIONES -> FUNCION VOID LETRERO LPAR OTRA RPAR SCO LBRA ESTATUTOS RBRA
Rule 20    PRIN -> PRINCIPAL LPAR RPAR LBRA ESTATUTOS RBRA
Rule 21    ESTATUTOS -> EST ESTATUTOS
Rule 22    ESTATUTOS -> empty
Rule 23    EST -> ASIGNACION
Rule 24    EST -> LECTURA
Rule 25    EST -> ESCRITURA
Rule 26    EST -> DESICION
Rule 27    EST -> CONDICIONAL
Rule 28    EST -> NOCONDICIONAL
Rule 29    EST -> LLAMADA
Rule 30    ASIGNACION -> LETRERO LCOR EXPRESION RCOR EQUAL EXPRESION SCO
Rule 31    ASIGNACION -> LETRERO EQUAL EXPRESION SCO
Rule 32    LECTURA -> LEE LPAR OTRA RPAR SCO
Rule 33    ESCRITURA -> ESCRIBE LPAR WRITE RPAR SCO
Rule 34    WRITE -> EXPRESION WRITE
Rule 35    WRITE -> LETRERO WRITE
Rule 36    WRITE -> COM WRITE
Rule 37    WRITE -> empty
Rule 38    DESICION -> SI LPAR EXPRESION RPAR ENTONCES LBRA ESTATUTOS RBRA SINO LBRA ESTATUTOS RBRA
Rule 39    DESICION -> SI LPAR EXPRESION RPAR ENTONCES LBRA ESTATUTOS RBRA
Rule 40    CONDICIONAL -> MIENTRAS LPAR EXPRESION RPAR HAZ LBRA ESTATUTOS RBRA
Rule 41    NOCONDICIONAL -> DESDE LETRERO LCOR NUM_I RCOR EQUAL EXPRESION HASTA EXPRESION HACER LBRA ESTATUTOS RBRA
Rule 42    LLAMADA -> LETRERO LPAR OTRA RPAR SCO
Rule 43    EXPRESION -> EXP SIM EXP
Rule 44    EXPRESION -> EXP
Rule 45    SIM -> LT
Rule 46    SIM -> MT
Rule 47    SIM -> NOTEQUAL
Rule 48    SIM -> ELT
Rule 49    SIM -> EMT
Rule 50    SIM -> EEQ
Rule 51    SIM -> AND
Rule 52    SIM -> OR
Rule 53    EXP -> TERMINO PLUS TERMINO
Rule 54    EXP -> TERMINO MINUS TERMINO
Rule 55    EXP -> TERMINO
Rule 56    TERMINO -> FACTOR MULT FACTOR
Rule 57    TERMINO -> FACTOR DIV FACTOR
Rule 58    TERMINO -> FACTOR
Rule 59    FACTOR -> LETRERO LPAR EXP2 RPAR
Rule 60    FACTOR -> LETRERO LCOR EXP RCOR
Rule 61    FACTOR -> LPAR EXP RPAR
Rule 62    FACTOR -> CONSTANTE
Rule 63    EXP2 -> EXP EXP2
Rule 64    EXP2 -> COM EXP2
Rule 65    EXP2 -> empty
Rule 66    CONSTANTE -> NUM_I
Rule 67    CONSTANTE -> NUM_F
Rule 68    CONSTANTE -> CR

Terminals, with rules where they appear

AND                  : 51
CHAR                 : 15
COM                  : 9 36 64
CR                   : 68
DESDE                : 41
DIV                  : 57
EEQ                  : 50
ELT                  : 48
EMT                  : 49
ENTONCES             : 38 39
EQUAL                : 30 31 41
ESCRIBE              : 33
FLOAT                : 14
FUNCION              : 16 17 18 19
HACER                : 41
HASTA                : 41
HAZ                  : 40
INT                  : 13
LBRA                 : 16 17 18 19 20 38 38 39 40 41
LCOR                 : 7 30 41 60
LEE                  : 32
LETRERO              : 1 2 3 4 6 7 16 17 18 19 30 31 35 41 42 59 60
LPAR                 : 16 16 17 18 18 19 20 32 33 38 39 40 42 59 61
LT                   : 45
MIENTRAS             : 40
MINUS                : 54
MT                   : 46
MULT                 : 56
NOTEQUAL             : 47
NUM_F                : 67
NUM_I                : 7 41 66
OR                   : 52
PLUS                 : 53
PRINCIPAL            : 20
PROGRAMA             : 1 2 3 4
RBRA                 : 16 17 18 19 20 38 38 39 40 41
RCOR                 : 7 30 41 60
REGRESA              : 16 18
RPAR                 : 16 16 17 18 18 19 20 32 33 38 39 40 42 59 61
SCO                  : 1 2 3 4 10 16 16 17 18 18 19 30 31 32 33 42
SI                   : 38 39
SINO                 : 38
STRING               : 
VAR                  : 5
VOID                 : 17 19
error                : 

Nonterminals, with rules where they appear

ASIGNACION           : 23
CONDICIONAL          : 27
CONSTANTE            : 62
DESICION             : 26
ESCRITURA            : 25
EST                  : 21
ESTATUTOS            : 16 17 18 19 20 21 38 38 39 40 41
EXP                  : 43 43 44 60 61 63
EXP2                 : 59 63 64
EXPRESION            : 16 18 30 30 31 34 38 39 40 41 41
FACTOR               : 56 56 57 57 58
FUNCIONES            : 1 2
LECTURA              : 24
LLAMADA              : 29
NOCONDICIONAL        : 28
OTRA                 : 5 6 7 8 9 10 16 17 18 19 32 42
PRIN                 : 1 2 3 4
SIM                  : 43
TERMINO              : 53 53 54 54 55
TIPO                 : 8 16 18
VARIABLES            : 1 3 16 17
WRITE                : 33 34 35 36
empty                : 11 22 37 65
programa             : 0

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA LETRERO SCO VARIABLES FUNCIONES PRIN
    (2) programa -> . PROGRAMA LETRERO SCO FUNCIONES PRIN
    (3) programa -> . PROGRAMA LETRERO SCO VARIABLES PRIN
    (4) programa -> . PROGRAMA LETRERO SCO PRIN

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . LETRERO SCO VARIABLES FUNCIONES PRIN
    (2) programa -> PROGRAMA . LETRERO SCO FUNCIONES PRIN
    (3) programa -> PROGRAMA . LETRERO SCO VARIABLES PRIN
    (4) programa -> PROGRAMA . LETRERO SCO PRIN

    LETRERO         shift and go to state 3


state 3

    (1) programa -> PROGRAMA LETRERO . SCO VARIABLES FUNCIONES PRIN
    (2) programa -> PROGRAMA LETRERO . SCO FUNCIONES PRIN
    (3) programa -> PROGRAMA LETRERO . SCO VARIABLES PRIN
    (4) programa -> PROGRAMA LETRERO . SCO PRIN

    SCO             shift and go to state 4


state 4

    (1) programa -> PROGRAMA LETRERO SCO . VARIABLES FUNCIONES PRIN
    (2) programa -> PROGRAMA LETRERO SCO . FUNCIONES PRIN
    (3) programa -> PROGRAMA LETRERO SCO . VARIABLES PRIN
    (4) programa -> PROGRAMA LETRERO SCO . PRIN
    (5) VARIABLES -> . VAR OTRA
    (16) FUNCIONES -> . FUNCION TIPO LETRERO LPAR OTRA RPAR SCO VARIABLES LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA
    (17) FUNCIONES -> . FUNCION VOID LETRERO LPAR OTRA RPAR SCO VARIABLES LBRA ESTATUTOS RBRA
    (18) FUNCIONES -> . FUNCION TIPO LETRERO LPAR OTRA RPAR SCO LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA
    (19) FUNCIONES -> . FUNCION VOID LETRERO LPAR OTRA RPAR SCO LBRA ESTATUTOS RBRA
    (20) PRIN -> . PRINCIPAL LPAR RPAR LBRA ESTATUTOS RBRA

    VAR             shift and go to state 8
    FUNCION         shift and go to state 9
    PRINCIPAL       shift and go to state 10

    VARIABLES                      shift and go to state 5
    FUNCIONES                      shift and go to state 6
    PRIN                           shift and go to state 7

state 5

    (1) programa -> PROGRAMA LETRERO SCO VARIABLES . FUNCIONES PRIN
    (3) programa -> PROGRAMA LETRERO SCO VARIABLES . PRIN
    (16) FUNCIONES -> . FUNCION TIPO LETRERO LPAR OTRA RPAR SCO VARIABLES LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA
    (17) FUNCIONES -> . FUNCION VOID LETRERO LPAR OTRA RPAR SCO VARIABLES LBRA ESTATUTOS RBRA
    (18) FUNCIONES -> . FUNCION TIPO LETRERO LPAR OTRA RPAR SCO LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA
    (19) FUNCIONES -> . FUNCION VOID LETRERO LPAR OTRA RPAR SCO LBRA ESTATUTOS RBRA
    (20) PRIN -> . PRINCIPAL LPAR RPAR LBRA ESTATUTOS RBRA

    FUNCION         shift and go to state 9
    PRINCIPAL       shift and go to state 10

    FUNCIONES                      shift and go to state 11
    PRIN                           shift and go to state 12

state 6

    (2) programa -> PROGRAMA LETRERO SCO FUNCIONES . PRIN
    (20) PRIN -> . PRINCIPAL LPAR RPAR LBRA ESTATUTOS RBRA

    PRINCIPAL       shift and go to state 10

    PRIN                           shift and go to state 13

state 7

    (4) programa -> PROGRAMA LETRERO SCO PRIN .

    $end            reduce using rule 4 (programa -> PROGRAMA LETRERO SCO PRIN .)


state 8

    (5) VARIABLES -> VAR . OTRA
    (6) OTRA -> . LETRERO OTRA
    (7) OTRA -> . LETRERO LCOR NUM_I RCOR OTRA
    (8) OTRA -> . TIPO OTRA
    (9) OTRA -> . COM OTRA
    (10) OTRA -> . SCO OTRA
    (11) OTRA -> . empty
    (13) TIPO -> . INT
    (14) TIPO -> . FLOAT
    (15) TIPO -> . CHAR
    (12) empty -> .

    LETRERO         shift and go to state 15
    COM             shift and go to state 17
    SCO             shift and go to state 18
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22
    FUNCION         reduce using rule 12 (empty -> .)
    PRINCIPAL       reduce using rule 12 (empty -> .)
    LBRA            reduce using rule 12 (empty -> .)

    OTRA                           shift and go to state 14
    TIPO                           shift and go to state 16
    empty                          shift and go to state 19

state 9

    (16) FUNCIONES -> FUNCION . TIPO LETRERO LPAR OTRA RPAR SCO VARIABLES LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA
    (17) FUNCIONES -> FUNCION . VOID LETRERO LPAR OTRA RPAR SCO VARIABLES LBRA ESTATUTOS RBRA
    (18) FUNCIONES -> FUNCION . TIPO LETRERO LPAR OTRA RPAR SCO LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA
    (19) FUNCIONES -> FUNCION . VOID LETRERO LPAR OTRA RPAR SCO LBRA ESTATUTOS RBRA
    (13) TIPO -> . INT
    (14) TIPO -> . FLOAT
    (15) TIPO -> . CHAR

    VOID            shift and go to state 24
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22

    TIPO                           shift and go to state 23

state 10

    (20) PRIN -> PRINCIPAL . LPAR RPAR LBRA ESTATUTOS RBRA

    LPAR            shift and go to state 25


state 11

    (1) programa -> PROGRAMA LETRERO SCO VARIABLES FUNCIONES . PRIN
    (20) PRIN -> . PRINCIPAL LPAR RPAR LBRA ESTATUTOS RBRA

    PRINCIPAL       shift and go to state 10

    PRIN                           shift and go to state 26

state 12

    (3) programa -> PROGRAMA LETRERO SCO VARIABLES PRIN .

    $end            reduce using rule 3 (programa -> PROGRAMA LETRERO SCO VARIABLES PRIN .)


state 13

    (2) programa -> PROGRAMA LETRERO SCO FUNCIONES PRIN .

    $end            reduce using rule 2 (programa -> PROGRAMA LETRERO SCO FUNCIONES PRIN .)


state 14

    (5) VARIABLES -> VAR OTRA .

    FUNCION         reduce using rule 5 (VARIABLES -> VAR OTRA .)
    PRINCIPAL       reduce using rule 5 (VARIABLES -> VAR OTRA .)
    LBRA            reduce using rule 5 (VARIABLES -> VAR OTRA .)


state 15

    (6) OTRA -> LETRERO . OTRA
    (7) OTRA -> LETRERO . LCOR NUM_I RCOR OTRA
    (6) OTRA -> . LETRERO OTRA
    (7) OTRA -> . LETRERO LCOR NUM_I RCOR OTRA
    (8) OTRA -> . TIPO OTRA
    (9) OTRA -> . COM OTRA
    (10) OTRA -> . SCO OTRA
    (11) OTRA -> . empty
    (13) TIPO -> . INT
    (14) TIPO -> . FLOAT
    (15) TIPO -> . CHAR
    (12) empty -> .

    LCOR            shift and go to state 28
    LETRERO         shift and go to state 15
    COM             shift and go to state 17
    SCO             shift and go to state 18
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22
    FUNCION         reduce using rule 12 (empty -> .)
    PRINCIPAL       reduce using rule 12 (empty -> .)
    LBRA            reduce using rule 12 (empty -> .)
    RPAR            reduce using rule 12 (empty -> .)

    OTRA                           shift and go to state 27
    TIPO                           shift and go to state 16
    empty                          shift and go to state 19

state 16

    (8) OTRA -> TIPO . OTRA
    (6) OTRA -> . LETRERO OTRA
    (7) OTRA -> . LETRERO LCOR NUM_I RCOR OTRA
    (8) OTRA -> . TIPO OTRA
    (9) OTRA -> . COM OTRA
    (10) OTRA -> . SCO OTRA
    (11) OTRA -> . empty
    (13) TIPO -> . INT
    (14) TIPO -> . FLOAT
    (15) TIPO -> . CHAR
    (12) empty -> .

    LETRERO         shift and go to state 15
    COM             shift and go to state 17
    SCO             shift and go to state 18
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22
    FUNCION         reduce using rule 12 (empty -> .)
    PRINCIPAL       reduce using rule 12 (empty -> .)
    LBRA            reduce using rule 12 (empty -> .)
    RPAR            reduce using rule 12 (empty -> .)

    TIPO                           shift and go to state 16
    OTRA                           shift and go to state 29
    empty                          shift and go to state 19

state 17

    (9) OTRA -> COM . OTRA
    (6) OTRA -> . LETRERO OTRA
    (7) OTRA -> . LETRERO LCOR NUM_I RCOR OTRA
    (8) OTRA -> . TIPO OTRA
    (9) OTRA -> . COM OTRA
    (10) OTRA -> . SCO OTRA
    (11) OTRA -> . empty
    (13) TIPO -> . INT
    (14) TIPO -> . FLOAT
    (15) TIPO -> . CHAR
    (12) empty -> .

    LETRERO         shift and go to state 15
    COM             shift and go to state 17
    SCO             shift and go to state 18
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22
    FUNCION         reduce using rule 12 (empty -> .)
    PRINCIPAL       reduce using rule 12 (empty -> .)
    LBRA            reduce using rule 12 (empty -> .)
    RPAR            reduce using rule 12 (empty -> .)

    OTRA                           shift and go to state 30
    TIPO                           shift and go to state 16
    empty                          shift and go to state 19

state 18

    (10) OTRA -> SCO . OTRA
    (6) OTRA -> . LETRERO OTRA
    (7) OTRA -> . LETRERO LCOR NUM_I RCOR OTRA
    (8) OTRA -> . TIPO OTRA
    (9) OTRA -> . COM OTRA
    (10) OTRA -> . SCO OTRA
    (11) OTRA -> . empty
    (13) TIPO -> . INT
    (14) TIPO -> . FLOAT
    (15) TIPO -> . CHAR
    (12) empty -> .

    LETRERO         shift and go to state 15
    COM             shift and go to state 17
    SCO             shift and go to state 18
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22
    FUNCION         reduce using rule 12 (empty -> .)
    PRINCIPAL       reduce using rule 12 (empty -> .)
    LBRA            reduce using rule 12 (empty -> .)
    RPAR            reduce using rule 12 (empty -> .)

    OTRA                           shift and go to state 31
    TIPO                           shift and go to state 16
    empty                          shift and go to state 19

state 19

    (11) OTRA -> empty .

    FUNCION         reduce using rule 11 (OTRA -> empty .)
    PRINCIPAL       reduce using rule 11 (OTRA -> empty .)
    LBRA            reduce using rule 11 (OTRA -> empty .)
    RPAR            reduce using rule 11 (OTRA -> empty .)


state 20

    (13) TIPO -> INT .

    LETRERO         reduce using rule 13 (TIPO -> INT .)
    COM             reduce using rule 13 (TIPO -> INT .)
    SCO             reduce using rule 13 (TIPO -> INT .)
    INT             reduce using rule 13 (TIPO -> INT .)
    FLOAT           reduce using rule 13 (TIPO -> INT .)
    CHAR            reduce using rule 13 (TIPO -> INT .)
    FUNCION         reduce using rule 13 (TIPO -> INT .)
    PRINCIPAL       reduce using rule 13 (TIPO -> INT .)
    LBRA            reduce using rule 13 (TIPO -> INT .)
    RPAR            reduce using rule 13 (TIPO -> INT .)


state 21

    (14) TIPO -> FLOAT .

    LETRERO         reduce using rule 14 (TIPO -> FLOAT .)
    COM             reduce using rule 14 (TIPO -> FLOAT .)
    SCO             reduce using rule 14 (TIPO -> FLOAT .)
    INT             reduce using rule 14 (TIPO -> FLOAT .)
    FLOAT           reduce using rule 14 (TIPO -> FLOAT .)
    CHAR            reduce using rule 14 (TIPO -> FLOAT .)
    FUNCION         reduce using rule 14 (TIPO -> FLOAT .)
    PRINCIPAL       reduce using rule 14 (TIPO -> FLOAT .)
    LBRA            reduce using rule 14 (TIPO -> FLOAT .)
    RPAR            reduce using rule 14 (TIPO -> FLOAT .)


state 22

    (15) TIPO -> CHAR .

    LETRERO         reduce using rule 15 (TIPO -> CHAR .)
    COM             reduce using rule 15 (TIPO -> CHAR .)
    SCO             reduce using rule 15 (TIPO -> CHAR .)
    INT             reduce using rule 15 (TIPO -> CHAR .)
    FLOAT           reduce using rule 15 (TIPO -> CHAR .)
    CHAR            reduce using rule 15 (TIPO -> CHAR .)
    FUNCION         reduce using rule 15 (TIPO -> CHAR .)
    PRINCIPAL       reduce using rule 15 (TIPO -> CHAR .)
    LBRA            reduce using rule 15 (TIPO -> CHAR .)
    RPAR            reduce using rule 15 (TIPO -> CHAR .)


state 23

    (16) FUNCIONES -> FUNCION TIPO . LETRERO LPAR OTRA RPAR SCO VARIABLES LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA
    (18) FUNCIONES -> FUNCION TIPO . LETRERO LPAR OTRA RPAR SCO LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA

    LETRERO         shift and go to state 32


state 24

    (17) FUNCIONES -> FUNCION VOID . LETRERO LPAR OTRA RPAR SCO VARIABLES LBRA ESTATUTOS RBRA
    (19) FUNCIONES -> FUNCION VOID . LETRERO LPAR OTRA RPAR SCO LBRA ESTATUTOS RBRA

    LETRERO         shift and go to state 33


state 25

    (20) PRIN -> PRINCIPAL LPAR . RPAR LBRA ESTATUTOS RBRA

    RPAR            shift and go to state 34


state 26

    (1) programa -> PROGRAMA LETRERO SCO VARIABLES FUNCIONES PRIN .

    $end            reduce using rule 1 (programa -> PROGRAMA LETRERO SCO VARIABLES FUNCIONES PRIN .)


state 27

    (6) OTRA -> LETRERO OTRA .

    FUNCION         reduce using rule 6 (OTRA -> LETRERO OTRA .)
    PRINCIPAL       reduce using rule 6 (OTRA -> LETRERO OTRA .)
    LBRA            reduce using rule 6 (OTRA -> LETRERO OTRA .)
    RPAR            reduce using rule 6 (OTRA -> LETRERO OTRA .)


state 28

    (7) OTRA -> LETRERO LCOR . NUM_I RCOR OTRA

    NUM_I           shift and go to state 35


state 29

    (8) OTRA -> TIPO OTRA .

    FUNCION         reduce using rule 8 (OTRA -> TIPO OTRA .)
    PRINCIPAL       reduce using rule 8 (OTRA -> TIPO OTRA .)
    LBRA            reduce using rule 8 (OTRA -> TIPO OTRA .)
    RPAR            reduce using rule 8 (OTRA -> TIPO OTRA .)


state 30

    (9) OTRA -> COM OTRA .

    FUNCION         reduce using rule 9 (OTRA -> COM OTRA .)
    PRINCIPAL       reduce using rule 9 (OTRA -> COM OTRA .)
    LBRA            reduce using rule 9 (OTRA -> COM OTRA .)
    RPAR            reduce using rule 9 (OTRA -> COM OTRA .)


state 31

    (10) OTRA -> SCO OTRA .

    FUNCION         reduce using rule 10 (OTRA -> SCO OTRA .)
    PRINCIPAL       reduce using rule 10 (OTRA -> SCO OTRA .)
    LBRA            reduce using rule 10 (OTRA -> SCO OTRA .)
    RPAR            reduce using rule 10 (OTRA -> SCO OTRA .)


state 32

    (16) FUNCIONES -> FUNCION TIPO LETRERO . LPAR OTRA RPAR SCO VARIABLES LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA
    (18) FUNCIONES -> FUNCION TIPO LETRERO . LPAR OTRA RPAR SCO LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA

    LPAR            shift and go to state 36


state 33

    (17) FUNCIONES -> FUNCION VOID LETRERO . LPAR OTRA RPAR SCO VARIABLES LBRA ESTATUTOS RBRA
    (19) FUNCIONES -> FUNCION VOID LETRERO . LPAR OTRA RPAR SCO LBRA ESTATUTOS RBRA

    LPAR            shift and go to state 37


state 34

    (20) PRIN -> PRINCIPAL LPAR RPAR . LBRA ESTATUTOS RBRA

    LBRA            shift and go to state 38


state 35

    (7) OTRA -> LETRERO LCOR NUM_I . RCOR OTRA

    RCOR            shift and go to state 39


state 36

    (16) FUNCIONES -> FUNCION TIPO LETRERO LPAR . OTRA RPAR SCO VARIABLES LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA
    (18) FUNCIONES -> FUNCION TIPO LETRERO LPAR . OTRA RPAR SCO LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA
    (6) OTRA -> . LETRERO OTRA
    (7) OTRA -> . LETRERO LCOR NUM_I RCOR OTRA
    (8) OTRA -> . TIPO OTRA
    (9) OTRA -> . COM OTRA
    (10) OTRA -> . SCO OTRA
    (11) OTRA -> . empty
    (13) TIPO -> . INT
    (14) TIPO -> . FLOAT
    (15) TIPO -> . CHAR
    (12) empty -> .

    LETRERO         shift and go to state 15
    COM             shift and go to state 17
    SCO             shift and go to state 18
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22
    RPAR            reduce using rule 12 (empty -> .)

    TIPO                           shift and go to state 16
    OTRA                           shift and go to state 40
    empty                          shift and go to state 19

state 37

    (17) FUNCIONES -> FUNCION VOID LETRERO LPAR . OTRA RPAR SCO VARIABLES LBRA ESTATUTOS RBRA
    (19) FUNCIONES -> FUNCION VOID LETRERO LPAR . OTRA RPAR SCO LBRA ESTATUTOS RBRA
    (6) OTRA -> . LETRERO OTRA
    (7) OTRA -> . LETRERO LCOR NUM_I RCOR OTRA
    (8) OTRA -> . TIPO OTRA
    (9) OTRA -> . COM OTRA
    (10) OTRA -> . SCO OTRA
    (11) OTRA -> . empty
    (13) TIPO -> . INT
    (14) TIPO -> . FLOAT
    (15) TIPO -> . CHAR
    (12) empty -> .

    LETRERO         shift and go to state 15
    COM             shift and go to state 17
    SCO             shift and go to state 18
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22
    RPAR            reduce using rule 12 (empty -> .)

    OTRA                           shift and go to state 41
    TIPO                           shift and go to state 16
    empty                          shift and go to state 19

state 38

    (20) PRIN -> PRINCIPAL LPAR RPAR LBRA . ESTATUTOS RBRA
    (21) ESTATUTOS -> . EST ESTATUTOS
    (22) ESTATUTOS -> . empty
    (23) EST -> . ASIGNACION
    (24) EST -> . LECTURA
    (25) EST -> . ESCRITURA
    (26) EST -> . DESICION
    (27) EST -> . CONDICIONAL
    (28) EST -> . NOCONDICIONAL
    (29) EST -> . LLAMADA
    (12) empty -> .
    (30) ASIGNACION -> . LETRERO LCOR EXPRESION RCOR EQUAL EXPRESION SCO
    (31) ASIGNACION -> . LETRERO EQUAL EXPRESION SCO
    (32) LECTURA -> . LEE LPAR OTRA RPAR SCO
    (33) ESCRITURA -> . ESCRIBE LPAR WRITE RPAR SCO
    (38) DESICION -> . SI LPAR EXPRESION RPAR ENTONCES LBRA ESTATUTOS RBRA SINO LBRA ESTATUTOS RBRA
    (39) DESICION -> . SI LPAR EXPRESION RPAR ENTONCES LBRA ESTATUTOS RBRA
    (40) CONDICIONAL -> . MIENTRAS LPAR EXPRESION RPAR HAZ LBRA ESTATUTOS RBRA
    (41) NOCONDICIONAL -> . DESDE LETRERO LCOR NUM_I RCOR EQUAL EXPRESION HASTA EXPRESION HACER LBRA ESTATUTOS RBRA
    (42) LLAMADA -> . LETRERO LPAR OTRA RPAR SCO

    RBRA            reduce using rule 12 (empty -> .)
    LETRERO         shift and go to state 52
    LEE             shift and go to state 53
    ESCRIBE         shift and go to state 54
    SI              shift and go to state 55
    MIENTRAS        shift and go to state 56
    DESDE           shift and go to state 57

    ESTATUTOS                      shift and go to state 42
    EST                            shift and go to state 43
    empty                          shift and go to state 44
    ASIGNACION                     shift and go to state 45
    LECTURA                        shift and go to state 46
    ESCRITURA                      shift and go to state 47
    DESICION                       shift and go to state 48
    CONDICIONAL                    shift and go to state 49
    NOCONDICIONAL                  shift and go to state 50
    LLAMADA                        shift and go to state 51

state 39

    (7) OTRA -> LETRERO LCOR NUM_I RCOR . OTRA
    (6) OTRA -> . LETRERO OTRA
    (7) OTRA -> . LETRERO LCOR NUM_I RCOR OTRA
    (8) OTRA -> . TIPO OTRA
    (9) OTRA -> . COM OTRA
    (10) OTRA -> . SCO OTRA
    (11) OTRA -> . empty
    (13) TIPO -> . INT
    (14) TIPO -> . FLOAT
    (15) TIPO -> . CHAR
    (12) empty -> .

    LETRERO         shift and go to state 15
    COM             shift and go to state 17
    SCO             shift and go to state 18
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22
    FUNCION         reduce using rule 12 (empty -> .)
    PRINCIPAL       reduce using rule 12 (empty -> .)
    LBRA            reduce using rule 12 (empty -> .)
    RPAR            reduce using rule 12 (empty -> .)

    OTRA                           shift and go to state 58
    TIPO                           shift and go to state 16
    empty                          shift and go to state 19

state 40

    (16) FUNCIONES -> FUNCION TIPO LETRERO LPAR OTRA . RPAR SCO VARIABLES LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA
    (18) FUNCIONES -> FUNCION TIPO LETRERO LPAR OTRA . RPAR SCO LBRA ESTATUTOS REGRESA LPAR EXPRESION RPAR SCO RBRA

    RPAR            shift and go to state 59


state 41

    (17) FUNCIONES -> FUNCION VOID LETRERO LPAR OTRA . RPAR SCO VARIABLES LBRA ESTATUTOS RBRA
    (19) FUNCIONES -> FUNCION VOID LETRERO LPAR OTRA . RPAR SCO LBRA ESTATUTOS RBRA

    RPAR            shift and go to state 60


state 42

    (20) PRIN -> PRINCIPAL LPAR RPAR LBRA ESTATUTOS . RBRA

    RBRA            shift and go to state 61


state 43

    (21) ESTATUTOS -> EST . ESTATUTOS
    (21) ESTATUTOS -> . EST ESTATUTOS
    (22) ESTATUTOS -> . empty
    (23) EST -> . ASIGNACION
    (24) EST -> . LECTURA
    (25) EST -> . ESCRITURA
    (26) EST -> . DESICION
    (27) EST -> . CONDICIONAL
    (28) EST -> . NOCONDICIONAL
    (29) EST -> . LLAMADA
    (12) empty -> .
    (30) ASIGNACION -> . LETRERO LCOR EXPRESION RCOR EQUAL EXPRESION SCO
    (31) ASIGNACION -> . LETRERO EQUAL EXPRESION SCO
    (32) LECTURA -> . LEE LPAR OTRA RPAR SCO
    (33) ESCRITURA -> . ESCRIBE LPAR WRITE RPAR SCO
    (38) DESICION -> . SI LPAR EXPRESION RPAR ENTONCES LBRA ESTATUTOS RBRA SINO LBRA ESTATUTOS RBRA
    (39) DESICION -> . SI LPAR EXPRESION RPAR ENTONCES LBRA ESTATUTOS RBRA
    (40) CONDICIONAL -> . MIENTRAS LPAR EXPRESION RPAR HAZ LBRA ESTATUTOS RBRA
    (41) NOCONDICIONAL -> . DESDE LETRERO LCOR NUM_I RCOR EQUAL EXPRESION HASTA EXPRESION HACER LBRA ESTATUTOS RBRA
    (42) LLAMADA -> . LETRERO LPAR OTRA RPAR SCO

    RBRA            reduce using rule 12 (empty -> .)
    REGRESA         reduce using rule 12 (empty -> .)
    LETRERO         shift and go to state 52
    LEE             shift and go to state 53
    ESCRIBE         shift and go to state 54
    SI              shift and go to state 55
    MIENTRAS        shift and go to state 56
    DESDE           shift and go to state 57

    EST                            shift and go to state 43
    ESTATUTOS                      shift and go to state 62
    empty                          shift and go to state 44
    ASIGNACION                     shift and go to state 45
    LECTURA                        shift and go to state 46
    ESCRITURA                      shift and go to state 47
    DESICION                       shift and go to state 48
    CONDICIONAL                    shift and go to state 49
    NOCONDICIONAL                  shift and go to state 50
    LLAMADA                        shift and go to state 51

state 44

    (22) ESTATUTOS -> empty .

    RBRA            reduce using rule 22 (ESTATUTOS -> empty .)
    REGRESA         reduce using rule 22 (ESTATUTOS -> empty .)


state 45

    (23) EST -> ASIGNACION .

    LETRERO         reduce using rule 23 (EST -> ASIGNACION .)
    LEE             reduce using rule 23 (EST -> ASIGNACION .)
    ESCRIBE         reduce using rule 23 (EST -> ASIGNACION .)
    SI              reduce using rule 23 (EST -> ASIGNACION .)
    MIENTRAS        reduce using rule 23 (EST -> ASIGNACION .)
    DESDE           reduce using rule 23 (EST -> ASIGNACION .)
    RBRA            reduce using rule 23 (EST -> ASIGNACION .)
    REGRESA         reduce using rule 23 (EST -> ASIGNACION .)


state 46

    (24) EST -> LECTURA .
